problem with new methods